--- a/assets/scss/custom.scss
+++ b/assets/scss/custom.scss
@@ -1,3 +1,4 @@
+/* Test */
 /* Immer Logo in der Navbar zeigen – auch im Overlay über dem Hero */
 .header--overlay .navbar-brand {
   opacity: 1 !important;
