--- a/layouts/partials/navbar_brand.html
+++ b/layouts/partials/navbar_brand.html
@@ -1,3 +1,4 @@
+<!-- DEBUG: my custom navbar_brand.html is loaded -->
 <a class="navbar-brand" href="{{ site.Home.RelPermalink }}">
   <img src="{{ "media/logo.png" | relURL }}" alt="Valentin Pfeil Consulting" style="height:40px;vertical-align:middle">
 </a>
